# Scripts

./: README.md
ACE/: AQL_README  MLcdna2subseq.def  Reagent_track.ace  gcg2targetFilter  reagent2target.pl~  reagentTableQuery.aql  reagent_track.txt  tab2ace.pl  table.txt
ALT_SPLICE/: genelist_2domain_count.pl
BLAST/: blastnParse.sh  clone2LGbln.sh  cloneID_BlastX_Parse.sh  exblx_to_tab.pl  fileBlast.sh  msp2hits2.pl  not_neg_drug.pl~  parseMSP.pl  rmNegSecHits.pl
CLUSTER/cluster-1.30/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.PL  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  setup.py
CLUSTER/cluster-1.30/X11/: Makefile.am  Makefile.in  gui.c
CLUSTER/cluster-1.30/data/: withng.cdt  withng.gtr
CLUSTER/cluster-1.30/doc/: Makefile  cluster.texinfo  cluster3.texinfo  structure.eps
CLUSTER/cluster-1.30/example/: Makefile  README  example.c
CLUSTER/cluster-1.30/html/: Bibliography.html  Cluster.html  Command.html  Contents.html  Data.html  Development.html  Distance.html  Hierarchical.html  Introduction.html  KMeans.html  PCA.html  SOM.html  TreeView.html  html idx  index.html
CLUSTER/cluster-1.30/mac/: Cluster.pmsp  Controller.m  Makefile  main.m
CLUSTER/cluster-1.30/mac/Cluster.xcode/: project.pbxproj
CLUSTER/cluster-1.30/mac/English.lproj/: InfoPlist.strings
CLUSTER/cluster-1.30/mac/English.lproj/AboutPanel.nib/: info.nib  keyedobjects.nib
CLUSTER/cluster-1.30/mac/English.lproj/MainMenu.nib/: info.nib  keyedobjects.nib
CLUSTER/cluster-1.30/perl/: Cluster.pm  Cluster.xs  MANIFEST.perl  Makefile.PL
CLUSTER/cluster-1.30/perl/examples/: ex5_treecluster
CLUSTER/cluster-1.30/perl/t/: 00_basic.t  01_mean_median.t  02_matrix_parse.t  11_clusterdistance.t  12_treecluster.t  14_kmedoids.t
CLUSTER/cluster-1.30/python/: MANIFEST.python
CLUSTER/cluster-1.30/python/test/: README  test.py
CLUSTER/cluster-1.30/src/: Makefile  Makefile.PL  Makefile.am  Makefile.in  command.c
CLUSTER/cluster-1.30/src/.deps/: cluster.Po  com.Po  command.Po  data.Po  linpack.Po  ranlib.Po
CLUSTER/cluster-1.30/windows/: Makefile  cluster.iss  gui.c  resources.rc
FASTA/: fasta_parse.pl
GFI/: GFIanal2ndSite.pl  GFIremRedund.pl  gfi2omim.pl
HANDY/: MatrixCount_halfsec.pl  MatrixCount_halfsec.pl~  MatrixGenET_halfsec.pl  MatrixGenET_halfsec.pl~  TimeCheck.pm  addVal.pl  authAddrMerge.pl  chemSDparse.pl  coMed.pl  deleteIfEmpty.sh  deleteIfEmpty.sh~  domain_list.pl  fastagrep.pl  findEmptyFiles.sh  hash_of_hash_of_hashes.pl  listCount.pl  matrixFix.pl  matrixFix_1000.pl  matrixFix_1000.pl~  matrixWeakTies.pl  medInflam.sh  medLineSearch.sh  meshDef.pl  meshDefParse.pl  meshDef_eutil.pl  meshDef_eutil.pl~  pm2authAddr_utf_URI.pl  query_Medline.pl  quickSLmatrix.pl  rever_comp.pl  shTemplate  tableAdder.pl  tableChop.pl  tablejoiner.pl  valSubtract.pl  webMatrix.pl
Incyte/: scripts
LIB/: TkLibBatchOrder.bak  TkLibBatchOrder_i2g.old_bak
PFAM_PARSE/: README  blob.pl~  domain_counter.pl  estpfam_parse.pl  hmmpfam_parse.pl  nr_drugDom.pl  pf_trustedCutoffs.pl  pf_trustedCutoffs.pl~  pfam_parse.pl  representative_pfam_domains.pl  test.pl  test.pl~
RACH/: FriendsTab.txt  GenepixResultsProcessing.pl  TkExample.pl  awkTabDelim.txt  example1.pl  example2.pl  menu_test.pl  namesplit.pl  namesplit.pl~  reformat_samples1_sepStudies.pl  roo_test.pl  roo_test_file  test.pl
Tk/: TkDirList.pl  TkFileSelect.pl  TkGetOpenFile.pl  getSaveFile.pl  (+2 more)
(+1089 files in other folders)
